# ZhangShengChao-s-work

2021.12.2/: dailyReport.md  demo.md  mystudy.md
daily report/: myDemo.md
dailyReport/: 12.3.md  dailyReport_12.1&12.2.md  dailyReport_12.10&12.13.md  dailyReport_12.10.md  dailyReport_12.14&12.16.md  dailyReport_12.6.md  dailyReport_12.7.md  dailyReport_12.9.md  myDemo.md
esp32-c3-rapid-construction-of-iot-projects/第01章、物联网项目开发概述/: 1.物联网概述.md  2.智能家居概述.md  3.物联网项目开发介绍.md
esp32-c3-rapid-construction-of-iot-projects/第02章、智能照明设备的整体设计/: 1.ESP32-C3 基础介绍.md  2.智能照明物联网项目介绍.md
esp32-c3-rapid-construction-of-iot-projects/第03章、基于 ESP32-C3 智能照明设备的硬件设计/: 1.基于 ESP32-C3 智能照明设备的硬件设计.md
esp32-c3-rapid-construction-of-iot-projects/第05章、智能照明设备驱动开发/: 1.智能照明设备驱动开发.md  2.ESP32-C3 LED PWM 编程.md
esp32-c3-rapid-construction-of-iot-projects/第11章、电源管理和低功耗优化方案/: 1.电源管理和低功耗优化方案.md  2.智能照明应用中电源管理方案.md
esp32-c3-rapid-construction-of-iot-projects/第12章、增强设备的安全功能/: 00.md
esp32-c3-rapid-construction-of-iot-projects/第13章、固件版本管理和量产实施方案/: 1.固件版本管理.md  2.量产实施方案.md
esp32-c3-rapid-construction-of-iot-projects/第14章、ESP-Rainmaker的介绍及使用/: 00.md
myProgram/esp-box/components/bsp/: CMakeLists.txt  Kconfig.projbuild
myProgram/esp-box/components/bsp/boards/: esp32_s3_box_lite.c  esp32_s3_box_lite.h
myProgram/esp-box/components/bsp/include/: bsp_board.h
myProgram/esp-box/components/bsp/src/indev/: bsp_btn.c  bsp_mouse.c  bsp_mouse.h
myProgram/esp-box/components/bsp/src/indev/bt_hid/: esp_hid_gap.c  esp_hid_gap.h
myProgram/esp-box/components/bsp/src/lcd/: bsp_lcd.c
(+90 files in other folders)
